--- a/blog/themes/landscape/source/css/_partial/header.styl
+++ b/blog/themes/landscape/source/css/_partial/header.styl
@@ -14,6 +14,8 @@
   &:after
     bottom: 0
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.2))
+  @media mq-mobile
+    height: mobile-header-height
 
 #header-outer
   height: 100%
@@ -29,7 +31,7 @@
   left: 0
   width: 100%
   height: 100%
-  background: banner-background-color
+  background: url(banner-url)
   background-size: cover
   z-index: -1
 
@@ -37,9 +39,11 @@
   text-align: center
   height: logo-size
   position: absolute
-  top: 50%
+  top: 25%
   left: 0
   margin-top: logo-size * -0.5
+  @media mq-mobile
+    top: 25px
 
 $logo-text
   text-decoration: none
@@ -52,15 +56,28 @@ $logo-text
   font-size: logo-size
   line-height: logo-size
   letter-spacing: 2px
+  cursor: default
+  &::selection
+    color: #fff
+    background: #888
+  @media mq-mobile
+    font-size: mobile-logo-size
+    
 
 #subtitle
   @extend $logo-text
   font-size: subtitle-size
   line-height: subtitle-size
   letter-spacing: 1px
+  cursor: default
+  &::selection
+    color: #fff
+    background: #888
 
 #subtitle-wrap
   margin-top: subtitle-size
+  @media mq-mobile
+    margin-top: 0
 
 #main-nav
   float: left
