--- a/blog/themes/landscape/source/css/_variables.styl
+++ b/blog/themes/landscape/source/css/_variables.styl
@@ -34,9 +34,11 @@ line-height-title = 1.1em
 
 // Header
 logo-size = 40px
+mobile-logo-size = 22px
 subtitle-size = 16px
-banner-height = 300px
-banner-url = "images/banner.jpg"
+banner-height = 500px
+mobile-header-height = 200px
+banner-url = "../img/banner.jpg"
 banner-background-color = rgba(0,0,0,.6)
 
 sidebar = hexo-config("sidebar")
