--- a/blog/themes/landscape/source/css/_partial/article.styl
+++ b/blog/themes/landscape/source/css/_partial/article.styl
@@ -82,7 +82,16 @@
     font-family: font-serif
     font-size: 1.4em
     margin: line-height 20px
-    text-align: center
+    padding: 10px;
+    background-color: #fafafa;
+    border-left: 6px solid #e6e6e6;
+    word-break: break-word;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 30px;
+    margin: 0 0 20px;
+    p 
+      margin: 0
     footer
       font-size: font-size
       margin: line-height 0
