--- a/blog/themes/landscape/source/css/_partial/header.styl
+++ b/blog/themes/landscape/source/css/_partial/header.styl
@@ -34,6 +34,8 @@
   background: url(banner-url)
   background-size: cover
   z-index: -1
+  @media mq-wide
+    background-position-y: wide-banner-offset-y
 
 #header-title
   text-align: center
