--- a/blog/themes/landscape/source/css/_variables.styl
+++ b/blog/themes/landscape/source/css/_variables.styl
@@ -38,8 +38,9 @@ mobile-logo-size = 22px
 subtitle-size = 16px
 banner-height = 500px
 mobile-header-height = 200px
+wide-header-height = 200px
 banner-url = "../img/banner.jpg"
-
+wide-banner-offset-y = -100px
 sidebar = hexo-config("sidebar")
 
 // Layout
@@ -63,3 +64,4 @@ columns = main-column + _sidebar-column
 mq-mobile = "screen and (max-width: 479px)"
 mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
 mq-normal = "screen and (min-width: 768px)"
+mq-wide = "screen and (min-width: 1281px)"
