--- a/blog/themes/landscape/source/css/style.styl
+++ b/blog/themes/landscape/source/css/style.styl
@@ -84,6 +84,7 @@ if sidebar is left
 @import "_partial/footer"
 @import "_partial/highlight"
 @import "_partial/mobile"
+@import "_custom/css3-demo"
 
 if sidebar
   @import "_partial/sidebar"
